@@ -10,6 +10,10 @@
 	Directory iteration fixed. New: owner=LastNode sets the owner of 
 	the directory to the name of the last node in the dir name. This allows
 	the creation of homedirs.
+
+	CentOS support added.
+
+	Extra encryption stage added in protocol.
 	
 2.1.13
 	Mistake in placement of update.conf runs fixed.
